# fully-vibe-code

./: README.md  config  design.md  pyproject.toml  test_config.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
alembic/: env.py
app/models/pydantic/: toy.py
app/models/sqlalchemy/: toy.py
app/repositories/: toy.py
app/services/: base.py  factory.py  toy.py
app/utils/: config.py
